--- a/aws.yml
+++ b/aws.yml
@@ -1,3 +1,5 @@
-ami_id: ami-9887c6e7
-instance_type: t2.micro
-Name: terraform-consul
+---
+test-instance:
+  ami_id: ami-9887c6e7
+  instance_type: t2.micro
+  Name: terraform-consul
