--- a/aws.yml
+++ b/aws.yml
@@ -1,7 +1,8 @@
 ---
 test-instance:
   region: us-east-1
-  availability_zone : us-east-1a
+  availability_zone: us-east-1a
+  aws_vpc: vpc-e706419c
   subnet_id: subnet-9bce3afc
   ami_id: ami-9887c6e7
   instance_type: t2.micro
