--- a/aws.yml
+++ b/aws.yml
@@ -3,6 +3,8 @@ test-instance:
   region: us-east-1
   availability_zone: us-east-1a
   ami_id: ami-9887c6e7
-  instance_type: t2.medium
+  instance_type: t2.large
   tags:
     Name: terraform-consul
+  hdp-cluster-minimal: /resources/hdp-cluster-minimal.yml
+  hdp-cluster-hadoop3: /resources/hdp-cluster-hadoop3.yml
