--- a/aws.yml
+++ b/aws.yml
@@ -6,5 +6,6 @@ test-instance:
   instance_type: t2.large
   tags:
     Name: terraform-consul
-  hdp-cluster-minimal: /resources/hdp-cluster-minimal.yml
-  hdp-cluster-hadoop3: /resources/hdp-cluster-hadoop3.yml
+hdp:
+  cluster-minimal: /resources/hdp-cluster-minimal.yml
+  cluster-hadoop3: /resources/hdp-cluster-hadoop3.yml
