--- a/aws.yml
+++ b/aws.yml
@@ -11,3 +11,4 @@ hdp:
   cluster-hadoop3: /resources/hdp-cluster-hadoop3.yml
   single-minimal: /resources/hdp-single-minimal.yml
   single-hadoop3: /resources/hdp-single-hadoop3.yml
+  no_instances: 1
