added client/service kv

--- a/aws.yml
+++ b/aws.yml
@@ -13,3 +13,18 @@ hdp:
   single-minimal: /resources/hdp-configs/hdp-single-minimal.yml
   single-hadoop3: /resources/hdp-configs/hdp-single-hadoop3.yml
   no_instances: 2
+  cluster_name: hdp-bigsql
+  master-clients: ['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT']
+  master-services: "- ZOOKEEPER_SERVER
+      - NAMENODE
+      - SECONDARY_NAMENODE
+      - RESOURCEMANAGER
+      - APP_TIMELINE_SERVER
+      - HISTORYSERVER
+      - HIVE_SERVER
+      - HIVE_METASTORE
+      - WEBHCAT_SERVER
+      - AMBARI_SERVER
+      - METRICS_COLLECTOR
+      - METRICS_MONITOR
+      - HST_SERVER"
