--- a/aws.yml
+++ b/aws.yml
@@ -3,17 +3,20 @@ test-instance:
   region: us-east-1
   availability_zone: us-east-1a
   ami_id: ami-9887c6e7
-  instance_type: t2.xlarge
   tags:
     Name: terraform-consul
-hdp:
-  cluster-minimal: /resources/hdp-configs/hdp-cluster-minimal.yml
-  cluster-bigsql: /resources/hdp-configs/hdp-cluster-bigsql.yml
-  cluster-hadoop3: /resources/hdp-configs/hdp-cluster-hadoop3.yml
-  single-minimal: /resources/hdp-configs/hdp-single-minimal.yml
-  single-hadoop3: /resources/hdp-configs/hdp-single-hadoop3.yml
+hdp-minimum:
+  instance_type: t2.large
   no_instances: 2
-  cluster_name: hdp-bigsql
+  cluster_name: hdp-minimum
   master-clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT']"
   master-services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - RESOURCEMANAGER\n      - APP_TIMELINE_SERVER\n      - HISTORYSERVER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - WEBHCAT_SERVER\n      - AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - HST_SERVER"
+  slave-services: "- DATANODE\n      - NODEMANAGER\n      - METRICS_MONITOR\n      - HST_AGENT"
+
+hdp-bigsql:
+  instance_type: t2.xlarge
+  no_instances: 2
+  cluster_name: hdp-bigsql
+  master-clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'HCAT', 'TEZ_CLIENT', 'SLIDER', 'SQOOP', 'HBASE_CLIENT']"
+  master-services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - SECONDARY_NAMENODE\n      - RESOURCEMANAGER\n      - APP_TIMELINE_SERVER\n      - HISTORYSERVER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - WEBHCAT_SERVER\n      - AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - HST_SERVER\n      - HBASE_MASTER\n      - HBASE_REGIONSERVER\n      - KNOX_GATEWAY"
   slave-services: "- DATANODE\n      - NODEMANAGER\n      - METRICS_MONITOR\n      - HST_AGENT"
