--- a/aws.yml
+++ b/aws.yml
@@ -5,6 +5,15 @@ test-instance:
   ami_id: ami-9887c6e7
   tags:
     Name: terraform-consul
+hdp-single:
+  instance_type: t2.xlarge
+  no_instances: 1
+  cluster_name: hdp-single
+  ambari_version: "2.6.2.2"
+  hdp_version: "2.6.5.0"
+  hdp_build_number: auto
+  master-clients: "['ZOOKEEPER_CLIENT', 'HDFS_CLIENT', 'YARN_CLIENT', 'MAPREDUCE2_CLIENT', 'HIVE_CLIENT', 'HCAT', 'TEZ_CLIENT', 'SLIDER', 'SQOOP', 'HBASE_CLIENT', 'PIG', 'OOZIE_CLIENT']"
+  master-services: "- ZOOKEEPER_SERVER\n      - NAMENODE\n      - DATANODE\n      - SECONDARY_NAMENODE\n      - RESOURCEMANAGER\n      -  APP_TIMELINE_SERVER\n      - HISTORYSERVER\n      - HIVE_SERVER\n      - HIVE_METASTORE\n      - WEBHCAT_SERVER\n      - OOZIE_SERVER\n      - NODEMANAGER\n      - HST_AGENT\n      - AMBARI_SERVER\n      - METRICS_COLLECTOR\n      - METRICS_MONITOR\n      - HST_SERVER\n      - HBASE_MASTER\n      - HBASE_REGIONSERVER\n      - KNOX_GATEWAY\n"
 hdp-minimum:
   instance_type: t2.large
   no_instances: 2
